# picarlo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  hello.py  import_picarlo.ipynb  pyproject.toml
.github/workflows/: ci.yml
src/: lib.rs
src/picarlo/: __init__.py  _picarlo_rust.pyi  cli.py  sim.py
test/: test_benchmark.py  test_sim.py
