[project]
name = "picarlo"
version = "0.4.0"
description = "calculate pi via the monte carlo method"
readme = "README.md"
authors = [
    { name = "Hendrik Frentrup", email = "hendrik.frentrup@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "loguru>=0.7.2",
    "typer>=0.13.1",
]

[project.scripts]
picarlo = "picarlo.cli:main"

[project.urls]
Homepage = "https://github.com/hendrikfrentrup/picarlo"
Issues = "https://github.com/hendrikfrentrup/picarlo/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]



[tool.pytest.ini_options]
pythonpath = "src"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pyrefly>=0.43.0",
    "pytest>=8.3.3",
    "tox>=4.26.0",
    "pre-commit>=3.8.0",
    "ruff>=0.7.2",
]
